-------------------------------------------------------------------
Wed Aug 19 12:07:58 CEST 200 - werner@suse.de

- Use dependency sorting for scripts using $all

-------------------------------------------------------------------
Tue Aug 18 14:16:05 CEST 2009 - werner@suse.de

- Make $all available for stopping order

-------------------------------------------------------------------
Mon Aug 17 14:55:39 CEST 2009 - werner@suse.de

- Loops within /etc/insserv.conf are real errors
- The system facility $all is special

-------------------------------------------------------------------
Thu Jul 23 11:28:08 CEST 2009 - werner@suse.de

- Fix expansion of the system facilties

-------------------------------------------------------------------
Mon Jun 29 14:26:57 CEST 2009 - werner@suse.de

- Make it possible to mark a script as interactive in the LSB
  header its self (patch from Petter Reinholdtsen).

-------------------------------------------------------------------
Mon Mar  9 13:12:17 CET 2009 - werner@suse.de

- Add service in .depend.start even if $all only is used

-------------------------------------------------------------------
Mon Feb 23 13:04:00 CET 2009 - werner@suse.de

- Allow overriding level on the command line

-------------------------------------------------------------------
Thu Feb 12 14:15:22 CET 2009 - werner@suse.de

- Do not be fooled by inexistent /proc

-------------------------------------------------------------------
Fri Sep 12 12:33:29 CEST 2008 - werner@suse.de

- Don't be fooled by broken symlinks (Patch from Kel Modderman)

-------------------------------------------------------------------
Thu Sep 11 15:28:29 CEST 2008 - werner@suse.de

- Load first script in argument list before all other scripts. This
  avoids problems with loading scripts in underterministic sequence
  returned by readdir(3) (Patch from Kel Modderman)

-------------------------------------------------------------------