@@ -1,0 +1,56 @@
+#!/bin/bash
+
+basedir=$(dirname $0)
+. $basedir/suite
+
+##########################################################################
+test_simple_sequence() {
+echo
+echo "info: test simple script ordering."
+echo
+
+initdir_purge
+
+insertscript firstscript <<'EOF' || true
+### BEGIN INIT INFO
+# Provides:          firstscript
+# Required-Start:    
+# Required-Stop:     
+# Default-Start:     2 3 4 5
+# Default-Stop:
+### END INIT INFO
+EOF
+
+insertscript middlescript <<'EOF' || true
+### BEGIN INIT INFO
+# Provides:          middlescript
+# Required-Start:    firstscript
+# Required-Stop:     firstscript
+# Default-Start:     2 3 4 5
+# Default-Stop:
+### END INIT INFO
+EOF
+
+insertscript lastscript <<'EOF' || true
+### BEGIN INIT INFO
+# Provides:          lastscript
+# Required-Start:    middlescript
+# Required-Stop:     middlescript
+# Default-Start:     2 3 4 5
+# Default-Stop:
+### END INIT INFO
+EOF
+
+list_rclinks
+
+check_script_present 2 firstscript
+check_script_present 3 firstscript
+check_script_present 4 firstscript
+check_script_present 5 firstscript
+check_order 3 firstscript middlescript
+check_order 3 middlescript lastscript
+}
+##########################################################################
+
+
+test_simple_sequence
